# project_utn

./: .gitignore  DEPLOY_RENDER.md  DEPLOY_RENDER_WEB_SERVICE.md  Dockerfile.render-web  docker-compose.yml  render.yaml
data/: .env.example  Dockerfile  Readme.md  docker-compose.yml  main.py  requirements.txt
data/app/: config.py  crud.py  crud_kolb_profiles.py  crud_users.py  database.py  schemas.py  security.py
data/app/routers/: auth.py  kolb_profiles.py  users.py
frontend/kolb-frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/kolb-frontend/nginx/: default.conf
frontend/kolb-frontend/src/: index.html  styles.scss
frontend/kolb-frontend/src/app/: app.config.ts  app.routes.ts
frontend/kolb-frontend/src/app/components/chat/: chat.component.html  chat.component.scss  chat.component.ts
frontend/kolb-frontend/src/app/components/kolb-profile/: kolb-profile.component.html  (+2 more)
frontend/kolb-frontend/src/app/core/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  chat.service.ts  kolb.service.ts  models.ts  user.service.ts
frontend/kolb-frontend/src/environments/: environment.ts
infra/mongodb/: Dockerfile
infra/render-web/: nginx.render.conf.template  start-web.sh
main/: .env.example  Dockerfile  README.md  pyproject.toml
main/src/kolb_main/: __init__.py  __main__.py  config.py  kolb_chat.py  models.py  server.py  topic_guard.py
main/src/kolb_main/agent/: graph.py  nodes.py  state.py
main/src/kolb_main/clients/: mcp_client.py  profile_api.py  profiler_a2a.py  tavily_client.py
main/tests/: test_kolb_chat.py  test_nodes.py  test_topic_guard.py
mcp_server-kolb/: Dockerfile  README.md  pyproject.toml
mcp_server-kolb/src/kolb_profile_server/: __main__.py  config.py  server.py
mcp_server-kolb/src/kolb_profile_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_server-kolb/src/kolb_profile_server/data/: scenarios.py
mcp_server-kolb/src/kolb_profile_server/resources/: teoria.py
mcp_server-kolb/src/kolb_profile_server/tools/: health.py  sampling.py  scenario.py  teoria.py
mcp_server-kolb/tests/: test_smoke.py
profiler/: .env.example  Dockerfile  pyproject.toml
profiler/src/kolb_profiler/: __main__.py  config.py
profiler/src/kolb_profiler/a2a/: handler.py  models.py  server.py
profiler/src/kolb_profiler/agent/: graph.py  nodes.py  prompts.py  state.py
profiler/src/kolb_profiler/clients/: mcp.py  profiler_api.py
profiler/tests/: test_graph.py
(+9 files in other folders)
