[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolb-main-agent"
version = "0.1.0"
description = "LangGraph orchestrator for Kolb interview chat and profiler A2A delegation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
kolb-main-agent = "kolb_main.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kolb_main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]