[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolb-profiler"
version = "0.1.0"
description = "LangGraph A2A agent for Kolb learning-style profiling"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.24.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
kolb-profiler = "kolb_profiler.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kolb_profiler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
